[project]
name = "webmonstro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
