[project]
name = "webmonstro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiochclient>=2.6.0",
    "alembic>=1.15.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "clickhouse-driver>=0.2.9",
    "elasticsearch[async]>=8.17.2",
    "fastapi[standard]>=0.115.11",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
